# mlops_pipeline

./: .gitignore  .gitlab-ci.yml  Pipfile  README.md  app.py  cdk.json
cdk_stacks/: batch_inference_stack.py
inference/: Pipfile
inference/pipeline_scripts/inference/: inference.py  requirements.txt
inference/pipeline_scripts/preprocessing/: preprocessing.py
inference/pipelines/: __version__.py  _utils.py  get_pipeline_definition.py  run_pipeline.py
inference/pipelines/batch_inference/: pipeline.py
scripts/: build.sh  functions.sh  inference.sh  install.sh  linting.sh  security.sh  training.sh  unittest.sh
scripts/model_management/: approve_model.py  create_model.py  run_inference_pipeline.py
training/: Pipfile  pyproject.toml  requirements.txt
training/ml_pipelines/: README.md  get_pipeline_definition.py  run_pipeline.py  version.py
training/ml_pipelines/training/: README.md  _utils.py  pipeline.py
training/training_pipeline_scripts/evaluation/: evaluation.py
training/training_pipeline_scripts/inference/: inference.py
training/training_pipeline_scripts/preprocessing/: preprocessing.py
training/training_pipeline_scripts/training/: train_lreg.py
